eq refac